--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ description: "Home"
 
 <h2>Doctoral Candidate in the Digital Media program in the School of Literature, Media, and Communication at the Georgia Institute of Technology</h2>
 
-My work focuses contemporary design and development practices with particular attention to accounts of emerging contexts. I approach these sites through the lenses of the humanities, science and technology studies, media theory, design research/studies/management, and human-computer interaction. I take influence from workplace ethnographies, studies of the everyday, and empirical design theory.
+My work focuses on contemporary design and development practices with particular attention to accounts of emerging contexts. I approach these sites through the lenses of the humanities, science and technology studies, media theory, design research/studies/management, and human-computer interaction. I take influence from workplace ethnographies, studies of the everyday, and empirical design theory.
 
