--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Latest Posts
 description: "Home"
 ---
 
-<h2>Doctoral Candidate in the Digital Media program in the School of Literature, Media, and Communication at the Georgia Institute of Technology</h2>
+<h2>Postdoctoral Fellow in the Center for Urban Innovation in the School of Public Policy at the Georgia Institute of Technology</h2>
 
-My work focuses on contemporary design and development practices with particular attention to accounts of emerging contexts. I approach these sites through the lenses of the humanities, science and technology studies, media theory, design research/studies/management, and human-computer interaction. I take influence from workplace ethnographies, studies of the everyday, and empirical design theory.
+My research focuses on the contemporary work practices of design and design as a metaphor for work. I pay particular attention to discourses around design thinking, civics, and post-computational work (mobile, precarious, and contingent labor). I approach these interests through the lenses of the humanities, science and technology studies, media theory, design research/studies/management, and human-computer interaction. I take influence from workplace ethnographies, studies of the everyday, and empirical design theory.
 
