--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: "Home"
 
 <h2>Postdoctoral Fellow in the Center for Urban Innovation in the School of Public Policy at the Georgia Institute of Technology</h2>
 
-My research focuses on the contemporary work practices of design and design(ing) as a metaphor for work(ing). I pay particular attention to discourses around design thinking, civics and civic innovation, and post-computational work (mobile, precarious, and contingent labor). Underwriting these interests is an attention to the materialities of design/work and the role of depictions (things, artifacts, and representations) in planning.
+My research focuses on the contemporary work practices of design, the emerging civic context of design methods, and design(ing) as a metaphor for work(ing). I pay particular attention to discourses around design thinking, civics and civic innovation, and post-computational work (mobile, precarious, and contingent labor). Underwriting these interests is an attention to the materialities of design/work and the role of depictions (things, artifacts, and representations) in planning and decision-making.
 <br/><br/>
 I approach these interests through the lenses of the humanities, science and technology studies, media theory, design research/studies/management, and human-computer interaction.  I take influence from workplace ethnographies, studies of the everyday, and empirical design theory.
 
