--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: homepage
 title: Home
 search_omit: true
 ---
-<h2>Postdoctoral Research Fellow in the Center for Urban Innovation in the School of Public Policy at the Georgia Institute of Technology</h2>
+<h2>Research Scientist at Georgia Institute of Technology in the Institute for People and Technology and the Center for Urban Innovation</h2>
 
 <p>
-My research focuses on the contemporary work practices and the emerging prominence of civic technology. I am interested in questions about the role of design in organizations, the nature of public participation and civic duty, and the social, cultural, and personal impacts of flexible work.
+My research focuses on (1) the future of work and (2) smart cities and civic technology. I am interested in the open government data, the professionalization of civic hacking, smart city technical assistance, and flexible work practices. I focus on questions related to design&mdash;how concerns are conceptualized, scaffolded, and represented&mdash;and affect&mdash;the embodied and relational qualities of activities, people, and situations.
 </p>
 <p>
-I approach these interests through the lenses of the humanities, science and technology studies, media theory, design research/studies/management, and human-computer interaction.  I take influence from workplace ethnographies, studies of the everyday, and empirical design theory.
+I approach these interests through the lenses of the humanities, media and communications, design research, urban studies, human-computer interaction, and science and technology studies.  I take influence from workplace ethnographies, affect theory, production studies, and policy research.
 </p>
 
 <hr>
